2008-08-16  Alexander Fehr  <pizzapunk gmail com>

  * audacious-1.5.1-1:
  New upstream release.
  New maintainer.
  Added dependencies on libxml2 and desktop-file-utils.
  Removed dependency on libglade.
  Made dependency on unzip optional.
  Removed conflicts audacious-player.
  Removed !libtool option.
  Enabled SSE2 for x86_64.
  Cleaned up install file.
  Added update-desktop-database to install file.

2008-03-15  Travis Willard  <travis@archlinux.org>

  * audacious-1.5.0-1:
  New upstream release.
  Renamed audacious-player to audacious - been a long time coming.

2008-02-16  Travis Willard  <travis@archlinux.org>

  * audacious-1.4.6-1:
  New upstream release.
  Added ChangeLog.