@@ -1,3 +1,9 @@
+2009-07-12  Eric Belanger  <eric@archlinux.org>
+
+	* audacious-2.1.0-1
+	New upstream release.
+	Added audacious-plugins depends (close FS#14655)
+
 2008-08-16  Alexander Fehr  <pizzapunk gmail com>
 
   * audacious-1.5.1-1:
